remaking some logic around here.