@@ -1,10 +1,12 @@
 package com.example.musicplayerbackend.service;
 
 import com.example.musicplayerbackend.data.ArtistRepository;
-import com.example.musicplayerbackend.domain.*;
+import com.example.musicplayerbackend.domain.Album;
+import com.example.musicplayerbackend.domain.Artist;
+import com.example.musicplayerbackend.domain.ArtistDetailDto;
+import com.example.musicplayerbackend.domain.ArtistPageDto;
 import com.example.musicplayerbackend.helpers.CoverDecoder;
 import com.example.musicplayerbackend.mapper.ArtistMapper;
-import com.example.musicplayerbackend.mapper.SongMapper;
 import com.example.musicplayerbackend.mapper.SortMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
@@ -14,9 +16,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Service
 @RequiredArgsConstructor
 public class ArtistService {
@@ -24,45 +23,37 @@ public class ArtistService {
     private final ArtistRepository artistRepository;
     private final ArtistMapper artistMapper;
     private final SortMapper sortMapper;
-    private final SongMapper songMapper;
 
     @Transactional(readOnly = true)
     public ArtistPageDto getArtists(String query, Integer page, Integer size, String sort) {
         int safePage = page == null ? 0 : Math.max(page, 0);
-        int safeSize = size == null ? 50 : Math.min(Math.max(size, 1), 200);
+        int safeSize = size == null ? 50 : Math.clamp(size, 1, 200);
         query = (query == null || query.isBlank()) ? "" : query;
         Pageable pageable = PageRequest.of(safePage, safeSize, sortMapper.toSort(sort));
 
         var result = artistRepository.findAllWithHashes(query, pageable);
 
         var content = result.getContent()
-                .stream().map(proj -> {
-                    ArtistExpandedDto dto = artistMapper.toExpandedDto(proj);
-                    String csv = proj.getSongFileHashesCsv();
-                    dto.setSongFileHashes(csv != null && !csv.isBlank()
-                            ? Arrays.stream(csv.split(",")).toList() : List.of());
-                    return dto;
-                }).toList();
+                .stream().map(artistMapper::toExpandedDto)
+                .toList();
 
-        return new ArtistPageDto(content, result.getNumber(), result.getSize(),
-                result.getTotalElements(), result.getTotalPages());
+        return new ArtistPageDto(
+                content,
+                result.getNumber(),
+                result.getSize(),
+                result.getTotalElements(),
+                result.getTotalPages()
+        );
     }
 
     @Transactional(readOnly = true)
     public ArtistDetailDto getArtistByHash(String artistHash) {
         Artist artist = artistRepository.findByHash(artistHash)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Artist not found"));
-
-        List<SongDto> songs = artist.getSongs() == null ? List.of() :
-                artist.getSongs().stream().map(songMapper::toDto).toList();
-
-        ArtistDetailDto dto = new ArtistDetailDto();
-        dto.setHash(artist.getHash());
-        dto.setName(artist.getName());
-        dto.setSongs(songs);
-        return dto;
+        return artistMapper.toDetailDto(artist);
     }
 
+    @Transactional(readOnly = true)
     public byte[] getArtistCover(String artistHash) {
         Artist artist = artistRepository.findByHash(artistHash)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Artist not found"));
